--- a/package.json
+++ b/package.json
@@ -4,22 +4,31 @@
   "private": true,
   "scripts": {
     "dev": "next dev",
+    "dev:ssl": "ts-node --project tsconfig.server.json server/index.ts",
     "build": "next build",
     "start": "next start",
-    "lint": "next lint"
+    "lint": "next lint",
+    "cert:generate": "rm -rf .cert && mkdir -p .cert && mkcert -key-file ./.cert/key.pem -cert-file ./.cert/cert.pem 'localhost'"
   },
   "dependencies": {
+    "@tanstack/react-query": "^4.29.5",
     "@types/node": "18.16.0",
     "@types/react": "18.0.38",
     "@types/react-dom": "18.0.11",
     "autoprefixer": "10.4.14",
+    "cors": "^2.8.5",
     "eslint": "8.39.0",
     "eslint-config-next": "13.3.1",
     "next": "13.3.1",
     "postcss": "8.4.23",
     "react": "18.2.0",
     "react-dom": "18.2.0",
+    "redux": "^4.2.1",
     "tailwindcss": "3.3.1",
+    "ts-node": "^10.9.1",
     "typescript": "5.0.4"
+  },
+  "devDependencies": {
+    "@types/cors": "^2.8.13"
   }
 }
